examples/bad/ERROR_NONEXHAUSTIVE_MATCH_PATTERNS/ne_sum_reconstruct.st
language core;

extend with #natural-literals, #sum-types, #type-reconstruction;

fn main(n : Nat + Bool) -> auto {
  return match n {
    	inl(a) => a
   }
}


//ERROR_NONEXHAUSTIVE_MATCH_PATTERNS
